Made some improvements to report based on feedback. Updated scripts.

--- a/telco_classification_final_report.ipynb
+++ b/telco_classification_final_report.ipynb
@@ -55,11 +55,12 @@
    "id": "86493f31",
    "metadata": {},
    "source": [
-    "- Of the 4 types of models I ran (Decision Tree, Random Forest, K Nearest Neighbors, and Logistic Regression), the Random Forest performed best, with an ultimate test accuracy of ~ 82%.\n",
-    "- This model outperforms the baseline prediction by ~ 9%.\n",
-    "- Next steps should be to encourage customers to move away from electronic checks as payment, as well as workign to understand what the issue is with fiber optic internet.\n",
-    "- We should use the best model to predict customer churn and provide incentives to encourage them to stay. \n",
-    "- Given more time in the future, I would like to run some multivariate analysis to control for certain features in order to determine which relationships are truly causal in nature. "
+    "- The goals is to analyze our dataset to determine factors driving churn, then produce a model to predict it.\n",
+    "- Electronic checks and fiber optic service are major drivers of churn.\n",
+    "- Ran 4 models and the Random Forest performed best, with an ultimate test accuracy of ~ 82%, beating baseline by ~ 9%.\n",
+    "- We should use the best model to predict customer churn and intervene to encourage them to stay.\n",
+    "- Recommend incentivizing customers to pay with something other than e-checks, and investigating the aspects of fiber optic service driving churn.\n",
+    "- Given more time in the future, I would like to run some multivariate analysis to control for certain features in order to determine which other relationships are truly causal in nature. "
    ]
   },
   {
@@ -357,7 +358,7 @@
    "id": "cc7cd234",
    "metadata": {},
    "source": [
-    "## 27% of Customers Churned Last Month"
+    "## <font color=blue>27% of Customers Churned Last Month<font>"
    ]
   },
   {
@@ -412,12 +413,12 @@
    "id": "1bd24c00",
    "metadata": {},
    "source": [
-    "### Customers Paying With Electronic Checks Are More Likely to Churn"
+    "## <font color=blue>Customers Paying With Electronic Checks Are More Likely to Churn<font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "55040ea9",
    "metadata": {},
    "outputs": [
@@ -427,7 +428,7 @@
        "Text(0.5, 0, 'Payment Type')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "217251ef",
    "metadata": {},
    "outputs": [
@@ -514,12 +515,12 @@
    "id": "4dc5f5f4",
    "metadata": {},
    "source": [
-    "### Customers With Multiple Phone Lines Don't Appear More or Less Likely to Churn"
+    "## <font color=blue>Customers With Multiple Phone Lines Don't Appear More Likely to Churn<font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "25085a3b",
    "metadata": {},
    "outputs": [
@@ -606,12 +607,12 @@
    "id": "4d7e6f81",
    "metadata": {},
    "source": [
-    "### Customers With Fiber Optic Internet Are More Likely to Churn"
+    "## <font color=blue>Customers With Fiber Optic Internet Are More Likely to Churn<font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "7dcbd5e2",
    "metadata": {},
    "outputs": [
@@ -695,18 +696,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392cca40",
-   "metadata": {},
-   "source": [
-    "### Exploration, Recapped:\n",
-    "- 27% of customers churned in the last month\n",
-    "- Customers with fiber optic internet or who pay with e-checks are more likely to churn. \n",
-    "    - Future efforts to understand why fiber optic customers churn may prove worthwhile.\n",
-    "    - Encouraging customers to switch from electronic checks to other payment methods may help reduce churn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "230b8c36",
    "metadata": {},
    "source": [
@@ -718,7 +707,7 @@
    "id": "69f94174",
    "metadata": {},
    "source": [
-    "## Baseline: "
+    "## <font color=green>Baseline:<font> "
    ]
   },
   {
@@ -757,7 +746,7 @@
    "id": "0e079e88",
    "metadata": {},
    "source": [
-    "## Decision Tree:\n",
+    "## <font color=green>Decision Tree:<font>\n",
     "- max_depth = 4"
    ]
   },
@@ -840,7 +829,7 @@
    "id": "3c1a3371",
    "metadata": {},
    "source": [
-    "## Random Forest:\n",
+    "## <font color=green>Random Forest:<font>\n",
     "- min_samples_per_leaf = 10\n",
     "- max_depth = 10"
    ]
@@ -935,7 +924,7 @@
    "id": "6dc7ad0f",
    "metadata": {},
    "source": [
-    "## K-Nearest Neighbors (KNN):\n",
+    "## <font color=green>K-Nearest Neighbors (KNN):<font>\n",
     "- k = 18"
    ]
   },
@@ -1074,7 +1063,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
+   "id": "a2b864b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = []\n",
+    "max_depth =20\n",
+    "\n",
+    "for i in range(2, max_depth):\n",
+    "    # Make the model (note that as n_samples goes up, max_depth will go down)\n",
+    "    depth = max_depth - i\n",
+    "    n_samples = i\n",
+    "    forest = RandomForestClassifier(max_depth=depth, min_samples_leaf=n_samples, random_state=123)\n",
+    "\n",
+    "    # Fit the model on the training set to determine accuracy on known data\n",
+    "    forest = forest.fit(X_train, y_train)\n",
+    "\n",
+    "    # Evaluate model's performance on training set:\n",
+    "    in_sample_accuracy = forest.score(X_train, y_train)\n",
+    "\n",
+    "    #Evaluate how the model performs on the validate set to compare with the training set (helps check for overfitting):\n",
+    "    out_of_sample_accuracy = forest.score(X_validate, y_validate)\n",
+    "\n",
+    "    #creates an entry into a dictionary containing metrics for each hyperparameter combination:\n",
+    "    output = {\n",
+    "        \"min_samples_per_leaf\": n_samples,\n",
+    "        \"max_depth\": depth,\n",
+    "        \"train_accuracy\": in_sample_accuracy,\n",
+    "        \"validate_accuracy\": out_of_sample_accuracy\n",
+    "    }\n",
+    "\n",
+    "    metrics.append(output)\n",
+    "\n",
+    "# converting output dictionary to dataframe:    \n",
+    "#df = pd.DataFrame(metrics)\n",
+    "#Adding a 'difference' column that contains values for the difference between the model's accuracy on the train and validate sets:\n",
+    "#df[\"difference\"] = df.train_accuracy - df.validate_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "293b2816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "fdc005b1",
    "metadata": {},
    "outputs": [
@@ -1108,70 +1148,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.901333</td>\n",
-       "      <td>0.797333</td>\n",
-       "      <td>0.104000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0.864222</td>\n",
-       "      <td>0.805333</td>\n",
-       "      <td>0.058889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.848667</td>\n",
-       "      <td>0.806222</td>\n",
-       "      <td>0.042444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.838667</td>\n",
-       "      <td>0.810667</td>\n",
-       "      <td>0.028000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.834889</td>\n",
-       "      <td>0.808000</td>\n",
-       "      <td>0.026889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.829333</td>\n",
-       "      <td>0.808889</td>\n",
-       "      <td>0.020444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.825111</td>\n",
-       "      <td>0.812444</td>\n",
-       "      <td>0.012667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>9</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.821333</td>\n",
-       "      <td>0.813333</td>\n",
-       "      <td>0.008000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
@@ -1179,138 +1155,33 @@
        "      <td>0.815111</td>\n",
        "      <td>-0.001556</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.811778</td>\n",
-       "      <td>0.812444</td>\n",
-       "      <td>-0.000667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>12</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.807556</td>\n",
-       "      <td>0.812444</td>\n",
-       "      <td>-0.004889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>13</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.805556</td>\n",
-       "      <td>0.812444</td>\n",
-       "      <td>-0.006889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>14</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.803333</td>\n",
-       "      <td>0.808000</td>\n",
-       "      <td>-0.004667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.796889</td>\n",
-       "      <td>0.803556</td>\n",
-       "      <td>-0.006667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.784667</td>\n",
-       "      <td>0.792000</td>\n",
-       "      <td>-0.007333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>17</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.772889</td>\n",
-       "      <td>0.774222</td>\n",
-       "      <td>-0.001333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.734222</td>\n",
-       "      <td>0.734222</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.734222</td>\n",
-       "      <td>0.734222</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    min_samples_per_leaf  max_depth  train_accuracy  validate_accuracy  \\\n",
-       "0                      2         18        0.901333           0.797333   \n",
-       "1                      3         17        0.864222           0.805333   \n",
-       "2                      4         16        0.848667           0.806222   \n",
-       "3                      5         15        0.838667           0.810667   \n",
-       "4                      6         14        0.834889           0.808000   \n",
-       "5                      7         13        0.829333           0.808889   \n",
-       "6                      8         12        0.825111           0.812444   \n",
-       "7                      9         11        0.821333           0.813333   \n",
-       "8                     10         10        0.813556           0.815111   \n",
-       "9                     11          9        0.811778           0.812444   \n",
-       "10                    12          8        0.807556           0.812444   \n",
-       "11                    13          7        0.805556           0.812444   \n",
-       "12                    14          6        0.803333           0.808000   \n",
-       "13                    15          5        0.796889           0.803556   \n",
-       "14                    16          4        0.784667           0.792000   \n",
-       "15                    17          3        0.772889           0.774222   \n",
-       "16                    18          2        0.734222           0.734222   \n",
-       "17                    19          1        0.734222           0.734222   \n",
+       "   min_samples_per_leaf  max_depth  train_accuracy  validate_accuracy  \\\n",
+       "8                    10         10        0.813556           0.815111   \n",
        "\n",
-       "    difference  \n",
-       "0     0.104000  \n",
-       "1     0.058889  \n",
-       "2     0.042444  \n",
-       "3     0.028000  \n",
-       "4     0.026889  \n",
-       "5     0.020444  \n",
-       "6     0.012667  \n",
-       "7     0.008000  \n",
-       "8    -0.001556  \n",
-       "9    -0.000667  \n",
-       "10   -0.004889  \n",
-       "11   -0.006889  \n",
-       "12   -0.004667  \n",
-       "13   -0.006667  \n",
-       "14   -0.007333  \n",
-       "15   -0.001333  \n",
-       "16    0.000000  \n",
-       "17    0.000000  "
+       "   difference  \n",
+       "8   -0.001556  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Using my optimal_rf_finder model to run a series of random forest models with differing hyperparameters for comparison:\n",
-    "optimal_rf_finder(X_train, y_train, X_validate, y_validate)\n",
-    "df"
+    "df = optimal_rf_finder(X_train, y_train, X_validate, y_validate)\n",
+    "#Sorting models to optimize for accuracy, while ensuring model is generalizable. Showing best model.\n",
+    "df[df.difference <= 0.10].sort_values(by=['validate_accuracy', 'difference'], ascending = [False,True]).head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "a9f38b7f",
    "metadata": {},
    "outputs": [
@@ -1328,6 +1199,7 @@
     }
    ],
    "source": [
+    "#Using a graph to plot the results of function built to find optimal model:\n",
     "rf_performance_grapher(df)\n",
     "\n",
     "#Adding a red line to show the most optimal hyperparameter combination for this Random Forest Model:\n",
@@ -1350,19 +1222,6 @@
    "metadata": {},
    "source": [
     "# In Summary:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71df181c",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Takeaways\n",
-    "- Payment type and fiber optic internet are good predictors of churn, while having multiple lines is not. \n",
-    "- Using the random forest model, I was able to achieve an ~82% accuracy in predicting whether a customer would churn, which beats the baseline model by ~ 8.6%.\n",
-    "- This model does well on unseen data (tested on two unseen datasets).\n",
-    "- I would expect this model to reasonably perform with about 80% accuracy on future data."
    ]
   },
   {
